--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+body{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 .lorem-p{
   color: green;
   background-color: black;
@@ -13,4 +18,8 @@ nav ul{
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
+}
+
+.SIT{
+  text-align: center;
 }
